# SFIM_Blockchain

./: .gitignore  pyproject.toml  requirements.txt  sfim_audit.db  start-complete-system.sh
backend/: __init__.py  agent.py  consensus.py  db_init.py  merkle.py  models.py  node.py  tpm_attest.py
backend/cmd/: agent.py  db_init.py  node.py
dashboard/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/events/: route.ts
dashboard/app/api/files/: route.ts
dashboard/app/api/logs/: route.ts
dashboard/app/api/status/: route.ts
dashboard/app/api/upload/: route.ts
dashboard/app/api/verify/: route.ts
dashboard/utils/: blockchain.ts
data/: agent_sfim.db  node0_sfim.db  sfim_audit.db
deploy/: Dockerfile
watched/node0/: sample_0.txt  test_doc_0.txt
watched/node1/: sample_1.txt
watched/node2/: sample_2.txt
watched/node3/: sample_3.txt
