[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfim-python"
version = "1.0.0"
description = "Quantum-Ready File Integrity Monitoring with PBFT and TPM"
authors = [{name = "SFIM Team"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0.0",
    "aiofiles>=23.0.0",
    "blspy>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]
tpm = [
    "tpm2-pytss>=2.2.0",
]
postgres = [
    "psycopg[asyncio]>=3.1.0",
]

[project.scripts]
sfim-node = "backend.cmd.node:main"
sfim-agent = "backend.cmd.agent:main"
sfim-db-init = "backend.cmd.db_init:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
